src/tests/resources/players/valid/nameWithLastname.players
Андрей Иванов
Артем Петров
Влад Сидоров
Слава Трубицин
Костя Мозговой