src/tests/resources/players/invalid/wrongOrderArguments_1.players
Андрей Иванов;
Артем Петров; G; 02
Влад Сидоров; B; 03
Слава Трубицин; B; 04
Костя Мозговой; G; 05